--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Bonjour</h1>
 <h2>Bonsoir</h2>
 <h3>modif 3</h3>
+<h6>Message avec h6</h6>
 <p>
 <script src="https://gist.github.com/dardourMed987/111f1e6df3b024b56771971d9496be3b.js"></script>
 </p>
